// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GuestNetwork/> Snapshot disabled. 1`] = `
<div>
  <h1>
    Guest network
  </h1>
  <p>
    
Guest network is used for 
    <a
      href="/network-settings/wifi"
    >
      guest Wi-Fi
    </a>
    .
It is separated from your ordinary LAN. Devices connected to this network are allowed to access the
internet, but are not allowed to access the configuration interface of the this device nor the devices
in LAN.
        
  </p>
  <form>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <div
        class="custom-control custom-checkbox "
      >
        <input
          class="custom-control-input"
          id="1"
          type="checkbox"
        />
        <label
          class="custom-control-label"
          for="1"
        >
          Enable
        </label>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      type="submit"
    >
       
       
      Save
    </button>
  </form>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`<GuestNetwork/> Snapshot enabled DHCP. 1`] = `
<div>
  <h1>
    Guest network
  </h1>
  <p>
    
Guest network is used for 
    <a
      href="/network-settings/wifi"
    >
      guest Wi-Fi
    </a>
    .
It is separated from your ordinary LAN. Devices connected to this network are allowed to access the
internet, but are not allowed to access the configuration interface of the this device nor the devices
in LAN.
        
  </p>
  <form>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <div
        class="custom-control custom-checkbox "
      >
        <input
          class="custom-control-input"
          id="1"
          type="checkbox"
        />
        <label
          class="custom-control-label"
          for="1"
        >
          Enable
        </label>
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="3"
      >
        Router IP address
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="3"
          required=""
          type="text"
          value="10.111.222.1"
        />
      </div>
      <small
        class="form-text text-muted"
      >
        Router's IP address in the guest inner network.
      </small>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="4"
      >
        Network mask
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="4"
          required=""
          type="text"
          value="255.255.255.0"
        />
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <div
        class="custom-control custom-checkbox "
      >
        <input
          class="custom-control-input"
          id="5"
          type="checkbox"
        />
        <label
          class="custom-control-label"
          for="5"
        >
          Enable DHCP
        </label>
        <small
          class="form-text text-muted"
        >
          Enable this option to automatically assign IP addresses to the devices connected to the router.
        </small>
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="11"
      >
        DHCP start
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="11"
          min="1"
          required=""
          type="number"
          value="100"
        />
        <div
          class="input-group-append"
        >
          <button
            aria-label="Increase"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-plus"
            />
          </button>
          <button
            aria-label="Decrease"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-minus"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="12"
      >
        DHCP max leases
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="12"
          min="1"
          required=""
          type="number"
          value="150"
        />
        <div
          class="input-group-append"
        >
          <button
            aria-label="Increase"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-plus"
            />
          </button>
          <button
            aria-label="Decrease"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-minus"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="13"
      >
        Lease time (hours)
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="13"
          min="1"
          required=""
          type="number"
          value="3600"
        />
        <div
          class="input-group-append"
        >
          <button
            aria-label="Increase"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-plus"
            />
          </button>
          <button
            aria-label="Decrease"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-minus"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <div
        class="custom-control custom-checkbox "
      >
        <input
          class="custom-control-input"
          id="6"
          type="checkbox"
        />
        <label
          class="custom-control-label"
          for="6"
        >
          Enable QoS
        </label>
        <small
          class="form-text text-muted"
        >
          This option enables you to set a bandwidth limit for the guest network, so that your main network doesn't get slowed-down by it.
        </small>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      type="submit"
    >
       
       
      Save
    </button>
  </form>
  <div
    id="dhcp-clients-container"
  >
    <h3>
      DHCP clients
    </h3>
    <p>
      No DHCP clients found.
    </p>
  </div>
</div>
`;

exports[`<GuestNetwork/> Snapshot enabled QoS. 1`] = `
<div>
  <h1>
    Guest network
  </h1>
  <p>
    
Guest network is used for 
    <a
      href="/network-settings/wifi"
    >
      guest Wi-Fi
    </a>
    .
It is separated from your ordinary LAN. Devices connected to this network are allowed to access the
internet, but are not allowed to access the configuration interface of the this device nor the devices
in LAN.
        
  </p>
  <form>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <div
        class="custom-control custom-checkbox "
      >
        <input
          class="custom-control-input"
          id="1"
          type="checkbox"
        />
        <label
          class="custom-control-label"
          for="1"
        >
          Enable
        </label>
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="3"
      >
        Router IP address
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="3"
          required=""
          type="text"
          value="10.111.222.1"
        />
      </div>
      <small
        class="form-text text-muted"
      >
        Router's IP address in the guest inner network.
      </small>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="4"
      >
        Network mask
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="4"
          required=""
          type="text"
          value="255.255.255.0"
        />
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <div
        class="custom-control custom-checkbox "
      >
        <input
          class="custom-control-input"
          id="5"
          type="checkbox"
        />
        <label
          class="custom-control-label"
          for="5"
        >
          Enable DHCP
        </label>
        <small
          class="form-text text-muted"
        >
          Enable this option to automatically assign IP addresses to the devices connected to the router.
        </small>
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <div
        class="custom-control custom-checkbox "
      >
        <input
          class="custom-control-input"
          id="6"
          type="checkbox"
        />
        <label
          class="custom-control-label"
          for="6"
        >
          Enable QoS
        </label>
        <small
          class="form-text text-muted"
        >
          This option enables you to set a bandwidth limit for the guest network, so that your main network doesn't get slowed-down by it.
        </small>
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="12"
      >
        Download
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="12"
          min="1"
          required=""
          type="number"
          value="1023"
        />
        <div
          class="input-group-append"
        >
          <p
            class="input-group-text"
          >
            kb/s
          </p>
          <button
            aria-label="Increase"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-plus"
            />
          </button>
          <button
            aria-label="Decrease"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-minus"
            />
          </button>
        </div>
      </div>
      <small
        class="form-text text-muted"
      >
        Download speed in guest network (in kilobits per second).
      </small>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="13"
      >
        Upload
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="13"
          min="1"
          required=""
          type="number"
          value="1025"
        />
        <div
          class="input-group-append"
        >
          <p
            class="input-group-text"
          >
            kb/s
          </p>
          <button
            aria-label="Increase"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-plus"
            />
          </button>
          <button
            aria-label="Decrease"
            class="btn btn-outline-secondary"
            type="button"
          >
            <i
              class="fas fa-minus"
            />
          </button>
        </div>
      </div>
      <small
        class="form-text text-muted"
      >
        Upload speed in guest network (in kilobits per second).
      </small>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      type="submit"
    >
       
       
      Save
    </button>
  </form>
  <div
    id="dhcp-clients-container"
  />
</div>
`;

exports[`<GuestNetwork/> Snapshot enabled. 1`] = `
<div>
  <h1>
    Guest network
  </h1>
  <p>
    
Guest network is used for 
    <a
      href="/network-settings/wifi"
    >
      guest Wi-Fi
    </a>
    .
It is separated from your ordinary LAN. Devices connected to this network are allowed to access the
internet, but are not allowed to access the configuration interface of the this device nor the devices
in LAN.
        
  </p>
  <form>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <div
        class="custom-control custom-checkbox "
      >
        <input
          class="custom-control-input"
          id="1"
          type="checkbox"
        />
        <label
          class="custom-control-label"
          for="1"
        >
          Enable
        </label>
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="3"
      >
        Router IP address
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="3"
          required=""
          type="text"
          value="10.111.222.1"
        />
      </div>
      <small
        class="form-text text-muted"
      >
        Router's IP address in the guest inner network.
      </small>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <label
        for="4"
      >
        Network mask
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="4"
          required=""
          type="text"
          value="255.255.255.0"
        />
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <div
        class="custom-control custom-checkbox "
      >
        <input
          class="custom-control-input"
          id="5"
          type="checkbox"
        />
        <label
          class="custom-control-label"
          for="5"
        >
          Enable DHCP
        </label>
        <small
          class="form-text text-muted"
        >
          Enable this option to automatically assign IP addresses to the devices connected to the router.
        </small>
      </div>
    </div>
    <div
      class="form-group col-sm-12 offset-lg-1 col-lg-10"
    >
      <div
        class="custom-control custom-checkbox "
      >
        <input
          class="custom-control-input"
          id="6"
          type="checkbox"
        />
        <label
          class="custom-control-label"
          for="6"
        >
          Enable QoS
        </label>
        <small
          class="form-text text-muted"
        >
          This option enables you to set a bandwidth limit for the guest network, so that your main network doesn't get slowed-down by it.
        </small>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      type="submit"
    >
       
       
      Save
    </button>
  </form>
  <div
    id="dhcp-clients-container"
  />
</div>
`;
